--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
         env:
           COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
         run: |
-          pod trunk push YourLibraryName.podspec
-
+          pod trunk push WhiteBoxCryptographySDK.podspec
+          
       - name: Upload to Carthage
         run: |
           carthage build --use-xcframeworks --archive
