--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,47 @@ jobs:
     runs-on: macOS-latest
 
     steps:
+      # Checkout the repository
       - uses: actions/checkout@v1
-      
+
+      # Set up Xcode with a specific version (e.g., Xcode 15.x)
+      - name: Set up Xcode
+        uses: macos-actions/setup-xcode@v2
+        with:
+          xcode-version: '15.x'  # Ensure this matches the version that supports all simulators (including xrOS)
+
+      # Install all simulators (iPhone, iPad, Apple Watch, Apple TV, and xrOS)
+      - name: Install all simulators
+        run: |
+          # List available runtimes to see if the ones you need are installed
+          xcrun simctl list runtimes
+
+          # Install simulators for iPhone, iPad, Apple Watch, Apple TV, and xrOS
+          # First, make sure the correct Xcode version is selected
+          sudo xcode-select -s /Applications/Xcode_15.x.app/Contents/Developer
+
+          # Install iOS, iPadOS, watchOS, tvOS, and xrOS simulators
+          # You may need to add specific versions based on your needs
+          xcodebuild -runFirstLaunch  # Ensure Xcode is fully initialized
+
+          # Download all available simulators
+          sudo xcode-select --switch /Applications/Xcode_15.x.app/Contents/Developer
+          xcodebuild -installRunTime -runtime "com.apple.CoreSimulator.SimRuntime.iOS-15-5"
+          xcodebuild -installRunTime -runtime "com.apple.CoreSimulator.SimRuntime.tvOS-15-5"
+          xcodebuild -installRunTime -runtime "com.apple.CoreSimulator.SimRuntime.watchOS-8-5"
+          xcodebuild -installRunTime -runtime "com.apple.CoreSimulator.SimRuntime.iPadOS-15-5"
+          xcodebuild -installRunTime -runtime "com.apple.CoreSimulator.SimRuntime.xrOS-1-3"
+
+      # Publish to CocoaPods
       - name: Publish to CocoaPods
         env:
           COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
         run: |
-          pod trunk push WhiteBoxCryptographySDK.podspec
-          
+          pod trunk push WhiteBoxCryptographySDK.podspec --verbose --allow-warnings
+
+      # Upload to Carthage
       - name: Upload to Carthage
         run: |
           carthage build --use-xcframeworks --archive
+
+      # Add more steps as necessary for tests or other tasks
