--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,9 @@ jobs:
         uses: actions/checkout@v2
 
       # Set up Xcode environment
-      - name: Set up Xcode 15.0
-        uses: apple-actions/setup-xcode@v2
-        with:
-          xcode-version: '15.0'
+      - name: Set Xcode Version
+        run: |
+          sudo xcode-select -switch /Applications/Xcode_15.0.app
 
       # Publish to CocoaPods
       - name: Publish to CocoaPods
@@ -37,6 +36,6 @@ jobs:
           brew install carthage || true
 
       # Build and archive with Carthage
-      - name: Upload to Carthage
+      - name: Build and Archive with Carthage
         run: |
           carthage build --use-xcframeworks --archive
